# bootcamp

./: .gitattributes  .gitignore  BUILD.md  LICENSE.md  Product-Backlog-EN.md  Product-Backlog.md  README-EN.md  README.md  Sprint-1-EN.md  Sprint-1.md  Sprint-2.md  run_backend.bat  run_backend.sh  run_frontend_device.bat  run_frontend_device.sh  run_frontend_web.bat  run_frontend_web.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  debt_model.py  main.py  mocks.py  pyproject.toml  rag_service.py  requirements.txt  test_main.py
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 0001_jobs_outbox.py  0002_official_data.py  0003_leaderboard.py  0004_entitlements.py  __init__.py
backend/src/maki/: __init__.py  bootstrap.py
backend/tests/: __init__.py  test_ci_contract.py  test_project_contract.py
backend/tests/acceptance/: test_container_security.py  test_dependency_failures.py  test_fail_closed.py  test_idempotency_race.py  test_operational_contract.py  test_telemetry_privacy.py
backend/tests/api/: __init__.py  conftest.py  job_fakes.py  test_billing_route.py  test_bootstrap.py  test_coach_route.py  test_errors.py  test_forecast_route.py  test_health.py  test_jobs_route.py  test_leaderboard_route.py  test_privacy_middleware.py  test_privacy_route.py  test_receipt_route.py
backend/tests/billing/: __init__.py  test_account_tokens.py  test_app_store.py  test_fail_closed.py  test_google_play.py  test_service.py
backend/tests/coach/: __init__.py  test_anthropic_adapter.py  test_retrieval.py  test_service.py  test_source_cards.py
backend/tests/common/: __init__.py  test_config.py  test_models.py
backend/tests/contract/: __init__.py  test_container_files.py  test_openapi.py
backend/tests/forecast/: __init__.py  test_backtest.py  test_baselines.py  test_cache.py  test_calibration.py  test_forecast_service.py  test_metrics.py  test_model_selection.py  test_models.py  test_prophet_adapter.py
backend/tests/infrastructure/: test_subject_lock.py
backend/tests/integration/: __init__.py  test_entitlement_repository.py  test_job_repository.py  test_leaderboard_repository.py  test_official_data_repository.py  test_privacy_repository.py  test_rate_limit.py  test_redis_queue.py
backend/tests/jobs/: __init__.py  test_dispatcher.py  test_ephemeral_receipts.py  test_query_service.py  test_result_repository.py  test_results.py  test_routed_publisher.py  test_service.py  test_worker_runtime.py
backend/tests/leaderboard/: __init__.py  test_service.py
backend/tests/modeling/: __init__.py  test_calibration.py  test_dataset_guard.py  test_export.py  test_metrics.py  test_model_card.py  test_temporal_split.py  test_training.py
backend/tests/observability/: __init__.py  test_redaction.py  test_trace_context.py
backend/tests/ocr/: __init__.py  test_file_guard.py  test_handler_retention.py  test_paddle_adapter.py  test_receipt_parser.py
backend/tests/official_data/: __init__.py  test_evds_client.py  test_models.py  test_service.py  test_tuik_client.py
backend/tests/privacy/: __init__.py  test_export.py  (+4 more)
(+285 files in other folders)
