[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "maki-backend"
version = "0.1.0"
description = "Maki mobil finans uygulamasının üretim servisleri"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "cryptography==49.0.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "opentelemetry-api==1.44.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
  "opentelemetry-instrumentation-fastapi==0.65b0",
  "opentelemetry-instrumentation-httpx==0.65b0",
  "opentelemetry-instrumentation-redis==0.65b0",
  "opentelemetry-instrumentation-sqlalchemy==0.65b0",
  "opentelemetry-sdk==1.44.0",
  "orjson==3.11.9",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyJWT==2.13.0",
  "python-multipart==0.0.32",
  "PyYAML==6.0.3",
  "redis==8.0.1",
  "sqlalchemy[asyncio]==2.0.51",
  "structlog==26.1.0",
  "tenacity==9.1.4",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
billing = [
  "google-api-python-client==2.198.0",
  "google-auth==2.56.0",
]
coach = ["anthropic==0.117.0"]
forecast = ["numpy==2.5.1", "pandas==3.0.3", "prophet==1.3.0"]
ocr = [
  "opencv-python-headless==5.0.0.93",
  "paddleocr==3.7.0",
  "paddlepaddle==3.3.1",
  "pillow==12.3.0",
]
modeling = ["lightgbm==4.7.0", "numpy==2.5.1", "pandas==3.0.3"]

[project.scripts]
maki-retention = "maki.workers.retention_main:main"

[dependency-groups]
dev = [
  "cyclonedx-bom==7.3.0",
  "hypothesis==6.157.0",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "respx==0.23.1",
  "ruff==0.15.22",
  "testcontainers==4.14.2",
  "time-machine==3.2.0",
  "types-PyYAML==6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maki"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "external: Gerçek dış servis veya kimlik bilgisi gerektirir.",
  "integration: PostgreSQL, Redis veya konteyner gerektirir.",
  "slow: Beş saniyeden uzun sürebilir.",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D213",
  "ISC001",
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 10
max-returns = 6
max-statements = 40

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG001", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["maki"]
warn_unreachable = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
